@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sndio-0.0.8-r1 (10 Apr 2015)
+
+  10 Apr 2015; Michael Weber <xmw@gentoo.org> +sndio-0.0.8-r1.ebuild,
+  sndio-9999.ebuild:
+  Add multilib-minimal
+
 *sndio-0.0.8 (25 Mar 2015)
 
   25 Mar 2015; Michael Weber <xmw@gentoo.org> +sndio-0.0.8.ebuild,
